--- a/app/src/main/res/layout/item_bank_account.xml
+++ b/app/src/main/res/layout/item_bank_account.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:padding="8dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/bankImageView"
         android:layout_width="41dp"
         android:layout_height="41dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
         android:background="@drawable/payments_background"
         android:padding="6dp"
+        app:layout_constraintBottom_toBottomOf="@+id/bankMaskTextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/bankNameTextView"
         app:srcCompat="@drawable/ic_baseline_account_balance_24" />
 
     <TextView
@@ -29,20 +28,44 @@
         android:text="This is a very long text that repeats itself over and over"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/transactionAmountTextView"
+        app:layout_constraintEnd_toStartOf="@id/bankBalanceTextView"
         app:layout_constraintStart_toEndOf="@id/bankImageView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/transactionDateTextView"
+        android:id="@+id/bankBalanceTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="12dp"
+        android:text="$123.50"
+        android:textAlignment="viewEnd"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        app:layout_constraintBottom_toBottomOf="@+id/bankNameTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/bankNameTextView"
+        app:layout_constraintTop_toTopOf="@+id/bankNameTextView" />
+
+    <TextView
+        android:id="@+id/bankMaskTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
-        android:text="4/9/20"
+        android:text="•••• 9999"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@android:color/tertiary_text_light"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bankDividerView"
         app:layout_constraintEnd_toEndOf="@+id/bankNameTextView"
         app:layout_constraintStart_toStartOf="@+id/bankNameTextView"
         app:layout_constraintTop_toBottomOf="@+id/bankNameTextView" />
+
+    <View
+        android:id="@+id/bankDividerView"
+        android:layout_width="0dp"
+        android:layout_height="0.7dp"
+        android:background="?android:attr/listDivider"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/bankBalanceTextView"
+        app:layout_constraintStart_toStartOf="@+id/bankImageView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
