--- a/app/src/main/res/layout/item_budget_amount.xml
+++ b/app/src/main/res/layout/item_budget_amount.xml
@@ -26,26 +26,21 @@
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/budgetAmountImageView"
-        app:layout_constraintEnd_toStartOf="@+id/budgetAmountInputLayout"
+        app:layout_constraintEnd_toStartOf="@+id/budgetAmountEditText"
         app:layout_constraintStart_toEndOf="@+id/budgetAmountImageView"
         app:layout_constraintTop_toTopOf="@+id/budgetAmountImageView" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/budgetAmountInputLayout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/budgetAmountEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
+        android:background="@null"
+        android:inputType="number"
+        android:textAlignment="viewEnd"
         app:layout_constraintBottom_toBottomOf="@+id/budgetAmountImageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/budgetAmountTitleTextView"
-        app:layout_constraintTop_toTopOf="@+id/budgetAmountImageView">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/budgetAmountEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number" />
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintTop_toTopOf="@+id/budgetAmountImageView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
