--- a/app/src/main/res/layout/fragment_monthly_activity_item.xml
+++ b/app/src/main/res/layout/fragment_monthly_activity_item.xml
@@ -40,6 +40,7 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="12dp"
+                android:layout_marginBottom="4dp"
                 android:text="Budget &amp; Categories"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                 android:textStyle="bold" />
@@ -50,11 +51,13 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/noTransactionsTextView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="24dp"
                     android:gravity="center"
-                    android:text="TextView"
+                    android:text="No Transactions"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                     android:visibility="gone" />
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -74,6 +77,7 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="12dp"
+                android:layout_marginBottom="4dp"
                 android:text="Merchants"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                 android:textStyle="bold" />
@@ -99,6 +103,7 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="12dp"
+                android:layout_marginBottom="4dp"
                 android:text="Credits"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                 android:textStyle="bold" />
