--- a/app/src/main/res/layout/fragment_transaction_item_detail.xml
+++ b/app/src/main/res/layout/fragment_transaction_item_detail.xml
@@ -221,6 +221,7 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="12dp"
+            android:layout_marginBottom="4dp"
             android:text="Similar Transactions"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             android:textStyle="bold" />
@@ -228,7 +229,8 @@
         <FrameLayout
             android:id="@+id/transactionDetailHistoryCardView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/transactionDetailTransactionHistoryRecyclerView"
