--- a/app/src/main/res/layout/item_budget_amount.xml
+++ b/app/src/main/res/layout/item_budget_amount.xml
@@ -6,12 +6,14 @@
 
     <ImageView
         android:id="@+id/budgetAmountImageView"
-        android:layout_width="41dp"
-        android:layout_height="41dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/entertainment_background"
         android:padding="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/entertainment" />
