--- a/app/src/main/res/layout/item_monthly_activity_categories.xml
+++ b/app/src/main/res/layout/item_monthly_activity_categories.xml
@@ -11,15 +11,17 @@
 
     <ImageView
         android:id="@+id/budgetLogoImageView"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/shopping_background"
         android:contentDescription="TODO"
         android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/budgetProgressBar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/budgetNameTextView"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/shopping" />
 
     <TextView
@@ -27,7 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="12dp"
         android:lines="1"
         android:text="Title"
@@ -35,7 +37,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/budgetAmountTextView"
         app:layout_constraintStart_toEndOf="@+id/budgetLogoImageView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/budgetLogoImageView" />
 
     <ImageView
         android:id="@+id/budgetArrowImageView"
@@ -56,7 +58,6 @@
         android:layout_height="wrap_content"
         android:max="100"
         android:progress="40"
-        app:layout_constraintBottom_toBottomOf="@+id/budgetSubtitleTextView"
         app:layout_constraintEnd_toStartOf="@+id/budgetSubtitleTextView"
         app:layout_constraintStart_toStartOf="@+id/budgetNameTextView"
         app:layout_constraintTop_toBottomOf="@+id/budgetNameTextView" />
@@ -79,10 +80,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginBottom="12dp"
         android:text="Subtitle"
         android:textAlignment="viewEnd"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/budgetAmountTextView"
         app:layout_constraintStart_toEndOf="@+id/budgetProgressBar"
         app:layout_constraintTop_toBottomOf="@+id/budgetAmountTextView" />
