--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -11,15 +11,17 @@
 
     <ImageView
         android:id="@+id/transactionLogoImageView"
-        android:layout_width="41dp"
-        android:layout_height="41dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/shopping_background"
         android:contentDescription="TODO"
         android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/transactionSubtitleTextView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/transactionTitleTextView"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/shopping" />
 
     <TextView
@@ -27,7 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="12dp"
         android:ellipsize="end"
         android:maxLines="1"
@@ -36,17 +38,15 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/transactionAmountTextView"
         app:layout_constraintStart_toEndOf="@id/transactionLogoImageView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/transactionLogoImageView" />
 
     <TextView
         android:id="@+id/transactionSubtitleTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
         android:text="Subtitle"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@android:color/tertiary_text_light"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/transactionTitleTextView"
         app:layout_constraintStart_toStartOf="@+id/transactionTitleTextView"
         app:layout_constraintTop_toBottomOf="@+id/transactionTitleTextView" />
