--- a/app/src/main/res/layout/fragment_saved.xml
+++ b/app/src/main/res/layout/fragment_saved.xml
@@ -37,6 +37,15 @@
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                 android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/savedNoTransactionsTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="24dp"
+                android:gravity="center_horizontal"
+                android:text="No Transactions"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/savedTransactionsRecyclerView"
                 android:layout_width="match_parent"
